<resources>
    <string name="app_name">TMS_ANDROID</string>
    <string name="lesson_num">Lesson %1$d</string>
    <string name="task_num">Task %1$d</string>
    <string name="lesson_name">Lesson %1$d</string>
    <string name="task_name">Lesson Task %1$d</string>
    <string name="lesson_17_task_1">Lesson 17 Task 1</string>
    <string name="explore_tasks">Explore tasks</string>
    <string name="click_to_view">Click to view task</string>
    <string name="tasks_count">%1$d Tasks</string>
    <string name="android_dev">Android Development</string>

    <string name="img">img</string>
    <string name="load_image">load image</string>
    <string name="image_loaded">image loaded</string>
    <string name="registration">Registration</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="name">Name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_phone">Enter Your phone</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="log_out">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="online">online</string>
    <string name="lesson_16_task_1">Lesson 16 Task 1</string>
    <string name="lesson_16_task_2">Lesson 16 Task 2</string>
    <string name="lesson_16_task_3">Lesson 16 Task 3</string>
    <string name="lesson_16_task_4">Lesson 16 Task 4</string>
    <string name="lesson_16_task_5">Lesson 16 Task 5</string>
    <string name="lesson_16_task_6">Lesson 16 Task 6</string>
    <string name="downloading">downloading...</string>
    <string name="start_download">Start Download</string>
    <string name="task6_title">Awesome Content</string>
    <string name="task6_description">This is a detailed description of the awesome content you are about to download. Press the button below to start the imitation process.</string>
    <string name="create_account">Create Account</string>
    <string name="account_created">Account created successfully!</string>
    <string name="registration_subtitle">Please fill in your details</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="user_info">User Info</string>
    <string name="age">Age</string>
    <string name="open_profile">Open Profile</string>
    <string name="invalid_input">Please enter valid data</string>
    <string name="profile">Profile</string>
    <string name="profile_name_format">Name: %1$s</string>
    <string name="profile_age_format">Age: %1$d</string>
    <string name="profile_email_format">Email: %1$s</string>
    <string name="profile_password_format">Password: %1$s</string>

    <string name="fragment_lifecycle">Fragment Lifecycle</string>
    <string name="current_state">Current state: %1$s</string>
    <string name="logcat_hint">Check Logcat for \'pretty\' logs!\nTAG: %1$s</string>
    <string name="logs_placeholder">Logs will appear here&#8230;</string>
    <string name="lesson_18_task_3">Lesson 18 Task 3</string>
    <string name="home">Home</string>
    <string name="catalog">Catalog</string>
    <string name="cart">Cart</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="catalog_fragment">Catalog Fragment</string>
    <string name="cart_fragment">Cart Fragment</string>
    <string name="already_on_fragment">You are already here!</string>
    <string name="lesson_19_task_1">Lesson 19 Task 1</string>
    <string name="lesson_19_task_2">Lesson 19 Task 2</string>
    <string name="change_text">Change Text</string>
    <string name="tab_the_button_to_change_this_text">Tab the button to change this text</string>
    <string name="log_s">Log %s</string>
    <string name="we_added_permission_to_the_manifest_file_nto_access_the_internet">We added permission to the manifest file\nto access the internet</string>
    <string name="navigate_to_next_screen">Navigate to Next Screen</string>
    <string name="navigate_to_previous_screen">Navigate to Previous Screen</string>
    <string name="contact_form">Contact Form</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="get_string_via_context">Get String Via Context</string>
    <string name="wifi_status_screen">Wifi Status Screen</string>
    <string name="get_wifi_status">Get wifi status</string>
    <string name="wifi_s">Wifi %s</string>
    <string name="change_via_suspend">Change via suspend</string>
    <string name="something_come_to_here">Something come to here</string>
    <string name="dynamic_text">Dynamic text</string>
    <string name="loading">Loading</string>
    <string name="cancel_operation">Cancel Operation</string>
    <string name="operation_canceled">Operation canceled</string>
    <string name="operation_completed">Done!</string>
    <string name="loading_percent">Loading: %1$d%%</string>
    <string name="city">City</string>
    <string name="textview">TextView</string>
    <string name="profile_details">Profile Details</string>
    <string name="personal_info">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="professional_details">Professional Details</string>
    <string name="current_job">Current Job</string>
    <string name="salary_expectations">Salary Expectations</string>
    <string name="school_university">School/University</string>
    <string name="location_social">Location &amp; Social</string>
    <string name="telegram_account">Telegram Account</string>
    <string name="github_account">GitHub Account</string>
    <string name="additional_info">Additional Information</string>
    <string name="briefly_about_yourself">Briefly about yourself</string>
    <string name="save_profile">Save Profile</string>
    <string name="favorite_sport">Favorite Sport</string>
    <string name="address">Address Location</string>
    <string name="at_symbol">\@</string>
    <string name="dollar_symbol">$</string>
    <string name="add_element">Add Element</string>
    <string name="lesson_20_homework_2">Lesson 20 Home Work 2</string>
    <string name="lesson_24_homework_1">Lesson 24 Home Work 1</string>
    <string name="in_stock">In Stock</string>
    <string name="wif_status">Wif status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="decrement">Decrement</string>
    <string name="increment">Increment</string>
    <string name="user_name">User Name</string>
    <string name="user_email_placeholder">user@example.com</string>
    <string name="register">Register</string>
    <string name="task_done">Task Done</string>
    <string name="task_name1">Task name</string>
    <string name="no_tasks_in_the_lesson">No tasks in the lesson</string>
</resources>